--- a/client/package.json
+++ b/client/package.json
@@ -31,12 +31,14 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "groq-sdk": "^0.8.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.454.0",
     "next": "^15.0.2",
     "openai": "^4.72.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.2",
     "shadcn-ui": "^0.9.3",
     "tailwind-merge": "^2.5.4",
@@ -44,6 +46,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@types/leaflet": "^1.9.14",
     "@types/node": "^22.8.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
