Budgest Service Initial Commit

--- a/server/budget-service/src/main/resources/application.properties
+++ b/server/budget-service/src/main/resources/application.properties
@@ -3,3 +3,7 @@ server.port=8300
 spring.config.import=optional:configserver:http://localhost:8888
 
 spring.cloud.config.profile=default
+
+api.client_id=${API_CLIENT_ID}
+api.client_secret=${API_CLIENT_SECRET}
+api.auth_url=https://test.api.amadeus.com/v1/security/oauth2/token
