--- a/server/budget-service/src/main/resources/application.properties
+++ b/server/budget-service/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.cloud.config.profile=default
 
 api.client_id=${API_CLIENT_ID}
 api.client_secret=${API_CLIENT_SECRET}
+api.google_api_key=${GOOGLE_API_KEY}
 api.auth_url=https://test.api.amadeus.com/v1/security/oauth2/token
