--- a/server/budget-service/src/main/resources/application.properties
+++ b/server/budget-service/src/main/resources/application.properties
@@ -1,10 +1,17 @@
 spring.application.name=budget-service
 server.port=8300
-spring.config.import=optional:configserver:http://localhost:8888
-
+#spring.config.import=optional:configserver:http://localhost:8888
+spring.cloud.config.enabled=false
 spring.cloud.config.profile=default
 
 api.client_id=${API_CLIENT_ID}
 api.client_secret=${API_CLIENT_SECRET}
 api.google_api_key=${GOOGLE_API_KEY}
 api.auth_url=https://test.api.amadeus.com/v1/security/oauth2/token
+
+spring.datasource.url=jdbc:mysql://localhost:3306/travelopedia_budgets
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
