--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "react-router-dom": "^6.26.2",
     "react-select": "^5.8.3",
     "react-spinners": "^0.14.1",
+    "react-toastify": "^10.0.6",
     "shadcn-ui": "^0.9.3",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
