--- a/server/customer-service/pom.xml
+++ b/server/customer-service/pom.xml
@@ -136,6 +136,12 @@
 			<artifactId>commons-math3</artifactId>
 			<version>3.6.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.33</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
