--- a/server/customer-service/pom.xml
+++ b/server/customer-service/pom.xml
@@ -116,6 +116,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+			<version>2.7.5</version> <!-- Use the appropriate version for your Spring Boot version -->
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
