--- a/server/customer-service/src/main/resources/application.properties
+++ b/server/customer-service/src/main/resources/application.properties
@@ -42,3 +42,8 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
+
+# redis configuration
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
