budget service proxy customer service

--- a/server/budget-service/src/main/resources/application.properties
+++ b/server/budget-service/src/main/resources/application.properties
@@ -4,14 +4,14 @@ server.port=8300
 spring.cloud.config.enabled=false
 spring.cloud.config.profile=default
 
-api.client_id=${API_CLIENT_ID}
-api.client_secret=${API_CLIENT_SECRET}
-api.google_api_key=${GOOGLE_API_KEY}
+api.client_id=4OcyNUo10xDmIiFfPZubzJ6RuuqEoNRh
+api.client_secret=1kVank7mGn0aKQ1B
+api.google_api_key=4OcyNUo10xDmIiFfPZubzJ6RuuqEoNRh
 api.auth_url=https://test.api.amadeus.com/v1/security/oauth2/token
 
 spring.datasource.url=jdbc:mysql://localhost:3306/travelopedia_budgets
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Figureyourself
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
