--- a/server/budget-service/pom.xml
+++ b/server/budget-service/pom.xml
@@ -31,12 +31,20 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<version>4.0.4</version> <!-- Add the appropriate version here -->
+		</dependency>
+
 		<!-- MySQL Connector -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.33</version>
 		</dependency>
+
+
 
 		<!-- Testing Dependencies -->
 		<dependency>
