--- a/server/recommendation-service/src/main/resources/application.properties
+++ b/server/recommendation-service/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.cloud.config.profile=default
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/TravelopediaDB
 spring.datasource.username=root
-spring.datasource.password=Figureyourself
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create
