--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.7.1"
+    "@fortawesome/fontawesome-free": "^6.7.1",
+    "react-quill": "^2.0.0"
   }
 }
