--- a/server/customer-service/src/main/resources/application.properties
+++ b/server/customer-service/src/main/resources/application.properties
@@ -36,7 +36,7 @@ spring.security.oauth2.client.provider.google.user-name-attribute=sub
 # MySQL Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/TravelopediaDB
 spring.datasource.username=root
-spring.datasource.password=Figureyourself
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
