--- a/server/customer-service/src/main/resources/application.properties
+++ b/server/customer-service/src/main/resources/application.properties
@@ -47,3 +47,6 @@ spring.jpa.show-sql=true
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
