--- a/server/customer-service/src/main/resources/application.properties
+++ b/server/customer-service/src/main/resources/application.properties
@@ -34,9 +34,9 @@ spring.security.oauth2.client.provider.google.user-name-attribute=sub
 
 
 # MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/TravelopediaDB
+spring.datasource.url=jdbc:mysql://35.188.76.128/customerservicedb
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Figureyourself
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
@@ -44,8 +44,10 @@ spring.jpa.show-sql=true
 
 
 # redis configuration
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
+spring.data.redis.host=redis-18956.c279.us-central1-1.gce.redns.redis-cloud.com
+spring.data.redis.port=18956
+spring.data.redis.username=default
+spring.data.redis.password=XvJyS5HjHqblnxmnFrauxVMAoL43eQSW
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
