change docker file - deployment coolfix

--- a/server/recommendation-service/Dockerfile
+++ b/server/recommendation-service/Dockerfile
@@ -1,4 +1,4 @@
 FROM --platform=$TARGETPLATFORM openjdk:17.0.1-jdk-slim
 EXPOSE 8080
-ADD target/docker-recommendation.jar docker-recommendation.jar
-ENTRYPOINT ["java","-jar","docker-recommendation.jar"]
+ADD target/recommendation-service.jar recommendation-service.jar
+ENTRYPOINT ["java","-jar","recommendation-service.jar"]
